test/tests/stages/17_supporting_dynamic_memory_allocation/valid/void_pointer/conversion_by_assignment.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[10]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: malloc
        List[1]: 
          TIdentifier: size
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            ULong: 
          Pointer: 
            Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: free
        List[1]: 
          TIdentifier: ptr
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Void: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: memcmp
        List[3]: 
          TIdentifier: s1
          TIdentifier: s2
          TIdentifier: n
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[3]: 
            Pointer: 
              Void: 
            Pointer: 
              Void: 
            ULong: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_ptr
        List[1]: 
          TIdentifier: i
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 3
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Char: 
          Pointer: 
            Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: check_char_ptr_argument
        List[2]: 
          TIdentifier: pointer
          TIdentifier: expected_val
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CDereference: 
                    CVar: 
                      TIdentifier: pointer
                      None: 
                    None: 
                  CVar: 
                    TIdentifier: expected_val
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[2]: 
            Pointer: 
              Char: 
            Char: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_void_ptr_as_int_ptr
        List[1]: 
          TIdentifier: pointer
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: pointer
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Void: 
          Pointer: 
            Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_dbl_array
        List[1]: 
          TIdentifier: n
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CCast: 
                  CFunctionCall: 
                    TIdentifier: malloc
                    List[1]: 
                      CBinary: 
                        CMultiply: 
                        CVar: 
                          TIdentifier: n
                          None: 
                        CSizeOfT: 
                          Double: 
                          None: 
                        None: 
                    None: 
                  Pointer: 
                    Double: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            ULong: 
          Pointer: 
            Double: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: set_doubles
        List[3]: 
          TIdentifier: array
          TIdentifier: n
          TIdentifier: d
        CB